[package]
name = "michuhu"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
path="src/lib.rs"
name="dahufi_lib"

[[bin]]
path="src/main.rs"
name="dahufi"

[dependencies]
gobble = {path="../../mlibs/gobble/"}
anyhow = "1.0.31"
clap_conf = {path="../../mlibs/clap_conf/"}
glob = "0.3.0"
