[package]
name = "dahufi"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
keywords = ["conlang","dahufi","converter","dictionary","builder"]
license = "MIT"
description = "A program to write and convert to Dahufi Language"
readme = "readme.md"
homepage = "dahufi.storyfeet.com"
repository = "https://github.com/storyfeet/dahufi_util"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
path="src/lib.rs"
name="dahufi_lib"

[[bin]]
path="src/main.rs"
name="dahufi"

[dependencies]
gobble = "0.6.3" 
anyhow = "1.0.31"
clap_conf = "0.1.5"
glob = "0.3.0"
